# vtcode

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURAL_DEBT_ANALYSIS.md  ARCHITECTURE_TRANSFORMATION.md  BRANCH_GAP_ANALYSIS.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  CONFIDENCE_ANALYSIS.md  CRITICAL_ISSUE_10_RESOLUTION.md  CRITICAL_ISSUE_9_VERIFICATION.md  Cargo.toml  DEDUPLICATION_SUMMARY.md  DUPLICATION_ANALYSIS_REPORT.txt  GAPS_SUMMARY.md  HAND_OFF_TO_CLAUDE.txt  LLM_PROVIDER_DUPLICATION_ANALYSIS.md  LOGGING_GUIDE.md  PHASE2_VTCODE_EXECUTION_IMPROVEMENTS.md  PHASE_1_COMPLETE.md  PHASE_1_EXECUTION_GUIDE.md  PHASE_1_REFACTORING_SUMMARY.md  PHASE_2_FIXES_COMPLETE.md  PHASE_2_MERGE_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_2_REVIEW.md  PHASE_2_VTCODE_UI_PROGRESS.md  PHASE_3_CRITICAL_REVIEW.md  PHASE_3_CRITICAL_REVIEW_SUMMARY.txt  PHASE_3_READINESS_REPORT.md  PRE_MERGE_VALIDATION_REPORT.md  PRE_PHASE_3_BRANCH_ANALYSIS.md  QUICK_REFERENCE_PROVIDER_ANALYSIS.md  README.md  REFACTORING_PROMPT.md  REFACTORING_ROADMAP.md  REFACTORING_SUMMARY.md  STREAMING_COMPLEXITY_ANALYSIS.md  STREAMING_COMPLEXITY_FIX_SUMMARY.md  TEST_COVERAGE_IMPROVEMENTS.md  (+17 more)
vtcode-commons/: Cargo.toml  README.md
vtcode-commons/src/: buffer.rs  lib.rs  lr_map.rs  model_family.rs  reasoning.rs  reference.rs  retry.rs  tokens.rs  tool_types.rs
vtcode-commons/src/errors/: memory.rs  mod.rs
vtcode-commons/src/paths/: mod.rs  static_impl.rs
vtcode-commons/src/safety/: gitignore.rs  mod.rs  validation.rs
vtcode-commons/src/telemetry/: memory.rs  mod.rs
vtcode-core/: AGENTS.md  Cargo.toml
vtcode-core/.vtcode/: tool-policy.json
vtcode-core/benches/: provider_performance.rs
vtcode-core/examples/: dialoguer_example.rs  error_handling_examples.rs
vtcode-core/src/: components.rs  http_client.rs  lib.rs  loop_memory.rs  loop_state.rs  mcp.rs  retry.rs  tool_policy.rs  types.rs
vtcode-core/src/audit/: permission_log.rs
vtcode-core/src/cli/: models_commands.rs
vtcode-core/src/commands/: ask.rs  validate.rs
vtcode-core/src/compaction/: mod.rs
vtcode-core/src/config/: mod.rs  models.rs  validator.rs
vtcode-core/src/context/: entity_resolver.rs  proactive_gatherer.rs
vtcode-core/src/core/: cache.rs  context_pruner.rs  loop_detector.rs  mod.rs  orchestrator_retry.rs  router.rs  token_budget.rs  trajectory.rs
vtcode-core/src/errors/: categories.rs  context.rs  mod.rs  recovery.rs
vtcode-core/src/exec/: code_executor.rs
vtcode-core/src/git/: mod.rs  reconciler.rs  worktree.rs
vtcode-core/src/llm/: cgp.rs  client.rs  config_adapter.rs  factory.rs  lightweight_routing.rs  mock_client.rs  mod.rs  model_resolver.rs  provider.rs  tool_bridge.rs  types.rs
vtcode-core/src/mcp/: mod.rs
vtcode-core/tests/: core_fuzz_props.rs  loop_detection_integration.rs  pty_unicode_test.rs
vtcode-execution/: Cargo.toml  PHASE2_VTCODE_EXECUTION_COMPLETE.md  README.md
vtcode-execution/src/: lib.rs  policy.rs
vtcode-llm/: AGENTS.md  Cargo.toml
vtcode-llm-anthropic/: Cargo.toml
vtcode-llm-anthropic/src/: anthropic.rs  lib.rs  provider.rs  types.rs
vtcode-llm-common/: Cargo.toml
vtcode-llm-common/src/: config.rs  error.rs  lib.rs  reasoning.rs
vtcode-llm-deepseek/: Cargo.toml
vtcode-llm-deepseek/src/: deepseek.rs  lib.rs
vtcode-llm-directline/: Cargo.toml
vtcode-llm-directline/src/: lib.rs  microsoft.rs
vtcode-llm-gemini/: Cargo.toml
vtcode-llm-gemini/src/: common.rs  config.rs  error.rs  lib.rs  provider.rs  request.rs  response.rs  tools.rs
vtcode-llm-lmstudio/: Cargo.toml
vtcode-llm-lmstudio/src/: lib.rs  lmstudio.rs
vtcode-llm-microsoft/: Cargo.toml
vtcode-llm-microsoft/src/: lib.rs
vtcode-llm-minimax/: Cargo.toml
vtcode-llm-minimax/src/: lib.rs  minimax.rs
vtcode-llm-ollama/: Cargo.toml
vtcode-llm-ollama/src/: lib.rs  ollama.rs
vtcode-llm-openai/: Cargo.toml
vtcode-llm-openai/src/: codex_prompt.rs  lib.rs  openai.rs  provider.rs  types.rs
vtcode-llm-openrouter/: Cargo.toml
vtcode-llm-openrouter/src/: common.rs  lib.rs  provider.rs
vtcode-llm-types/: Cargo.toml
vtcode-llm-types/src/: error.rs  lib.rs  message.rs  provider.rs  request.rs  response.rs
vtcode-llm-xai/: Cargo.toml
vtcode-llm-xai/src/: lib.rs  xai.rs
vtcode-llm/src/: config.rs  lib.rs  mock.rs  model_resolver.rs  tool_bridge.rs
vtcode-mcp/: Cargo.toml  MIGRATION.md  README.md
vtcode-mcp/examples/: basic_client.rs  tool_discovery.rs
vtcode-mcp/src/: cli.rs  client.rs  connection_pool.rs  enhanced_config.rs  lib.rs  provider.rs  tool_discovery.rs  tool_discovery_cache.rs
vtcode-mcp/tests/: cli_test.rs  integration_test.rs
vtcode-memory/: Cargo.toml  README.md
vtcode-memory/src/: error.rs  lib.rs  manager.rs  session_log.rs  simple.rs  types.rs
vtcode-pods/: AGENTS.md  Cargo.toml  README.md
vtcode-pods/src/: catalog.rs  manager.rs  store.rs
vtcode-procedures/: Cargo.toml  README.md
vtcode-procedures/src/: lib.rs  loader.rs  manager.rs
vtcode-prompts/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
vtcode-prompts/examples/: basic_usage.rs  configuration.rs  custom_prompts.rs
vtcode-prompts/src/: config.rs  context.rs  custom.rs  generator.rs  lib.rs  system.rs  templates.rs
vtcode-prompts/tests/: integration_tests.rs
vtcode-rag/: Cargo.toml  README.md
vtcode-rag/src/: chunker.rs  embedder.rs  indexing.rs  lib.rs  query.rs  types.rs
vtcode-rag/tests/: integration_sop_loading.rs
vtcode-tool-traits/: Cargo.toml
vtcode-tool-traits/src/: error.rs  lib.rs  mcp.rs  policy.rs  traits.rs  types.rs
vtcode-tools/: AGENTS.md  Cargo.toml  README.md
vtcode-tools/src/: acp_tool.rs  adapters.rs  compat.rs  lib.rs
vtcode-ui/: Cargo.toml  DEPENDENCY_ANALYSIS.md  DEPENDENCY_MAP.md  PRE_MERGE_CHECKLIST.md  README.md  TESTING_PLAN.md
vtcode-ui/src/: diff_renderer.rs  file_colorizer.rs  lib.rs  markdown.rs  prompts.rs  slash.rs  theme.rs  theme_config.rs  theme_manager.rs  tools.rs  tui.rs  user_confirmation.rs  utils.rs
vtcode-ui/tests/: integration_tests.rs
vtcode-vectordb/: Cargo.toml  README.md
vtcode-vectordb/src/: error.rs  lib.rs  traits.rs  types.rs
(+847 files in other folders)
