[package]
name = "vtcode-core"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Core library for VTCode - a Rust-based terminal coding agent"
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-core"
keywords = ["ai", "coding", "agent", "llm", "rust"]
categories = ["development-tools", "api-bindings"]
include = [
    "src/",
    "tests/",
    "examples/",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "embedded_assets_source/",
]
[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
toml = "0.9.8"
toml_edit = "0.23"
tokio = { version = "1.48", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "process",
] }
tokio-util = { version = "0.7", features = ["codec"] }
async-process = "2.2"
futures = "0.3"
futures-lite = "2.3"
async-stream = "0.3"
base64 = "0.22"
walkdir = "2.5"
glob = "0.3"
thiserror = "2.0"
dialoguer = "0.12.0"
regex = "1.12"
shell-words = "1.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-bash = "0.25"
flate2 = "1.1"
indexmap = { version = "2.12", features = ["serde"] }
itertools = "0.14.0"
tempfile = "3.0"
dashmap = "6.1" # For concurrent hash maps
once_cell = "1.19"
parking_lot = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = [
    "serde",
] } # For timestamp handling in CLI
iana-time-zone = "0.1"
humantime = "2.1"
rand = "0.9"
terminal_size = "0.4.3"
async-trait = "0.1.89"
# Dotenv support
dotenvy = "0.15"
# Home directory detection
dirs = "6.0"
# YAML support
serde_yaml = "0.9"
tracing = "0.1"
vte = "0.15"
anstyle-parse = "0.2"
# ANSI styling
anstyle = "1.0"
anstyle-git = "1.1"
anstyle-ls = "1.0"
anstyle-crossterm = "4.0"
anstyle-query = "1.0"
anstream = "0.6"
anstyle-syntect = "1.0"
colorchoice-clap = "1.0"
quick_cache = "0.6"
roff = "0.2"
syntect = "5.2"
# UI dependencies - vtcode-core still needs some for tools/pty functionality
crossterm = "0.29.0"
ratatui = "0.29"
portable-pty = "0.8"
perg = "0.8.0"
vt100 = "0.15"
ansi-to-tui = "7.0"
dissimilar = "1.0"

rig = { package = "rig-core", version = "0.23.1", default-features = false, features = [
    "reqwest-rustls",
] }
vtcode-commons = { path = "../vtcode-commons", version = "0.43.6" }
vtcode-exec-events = { path = "../vtcode-exec-events", version = "0.43.6" }
vtcode-execution = { path = "../vtcode-execution", version = "0.43.6" }
vtcode-tool-traits = { path = "../vtcode-tool-traits", version = "0.43.6" }
vtcode-config = { path = "../vtcode-config", version = "0.43.6" }
vtcode-prompts = { path = "../vtcode-prompts", version = "0.43.6" }
vtcode-markdown-store = { path = "../vtcode-markdown-store", version = "0.43.6" }
vtcode-indexer = { path = "../vtcode-indexer", version = "0.43.6" }
vtcode-mcp = { path = "../vtcode-mcp", version = "0.43.6" }
vtcode-ui = { path = "../vtcode-ui", version = "0.43.6" }
# Provider crates - all extracted to standalone crates (Phase 8 complete)
vtcode-llm-types = { path = "../vtcode-llm-types", version = "0.43.6" }
vtcode-llm-anthropic = { path = "../vtcode-llm-anthropic", version = "0.43.6" }
vtcode-llm-deepseek = { path = "../vtcode-llm-deepseek", version = "0.43.6" }
vtcode-llm-directline = { path = "../vtcode-llm-directline", version = "0.43.6" }
vtcode-llm-gemini = { path = "../vtcode-llm-gemini", version = "0.43.6" }
vtcode-llm-lmstudio = { path = "../vtcode-llm-lmstudio", version = "0.43.6" }
vtcode-llm-minimax = { path = "../vtcode-llm-minimax", version = "0.43.6" }
vtcode-llm-moonshot = { path = "../vtcode-llm-moonshot", version = "0.43.6" }
vtcode-llm-ollama = { path = "../vtcode-llm-ollama", version = "0.43.6" }
vtcode-llm-openai = { path = "../vtcode-llm-openai", version = "0.43.6" }
vtcode-llm-openrouter = { path = "../vtcode-llm-openrouter", version = "0.43.6" }
vtcode-llm-xai = { path = "../vtcode-llm-xai", version = "0.43.6" }
vtcode-llm-zai = { path = "../vtcode-llm-zai", version = "0.43.6" }
vtcode-memory = { path = "../vtcode-memory", version = "0.43.6" }
vtcode-rag = { path = "../vtcode-rag", version = "0.43.6" }
vtcode-vectordb = { path = "../vtcode-vectordb", version = "0.43.6" }

# Token counting for attention budget management
tokenizers = { version = "0.22", features = ["http"] }

# Schema generation
schemars = { version = "0.8", optional = true }

# MCP (Model Context Protocol) support is now in vtcode-mcp crate
# Keeping these dependencies for other parts of vtcode-core that might use them
openai-harmony = "0.0.3"
url = "2.5"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
which = "8.0.0"
textwrap = "0.16"

[build-dependencies]
vtcode-config = { path = "../vtcode-config", version = "0.43.6" }

[target.'cfg(unix)'.dependencies]

[[example]]
name = "anstyle_test"
path = "examples/anstyle_test.rs"

[[example]]
name = "dialoguer_example"
path = "examples/dialoguer_example.rs"

[[example]]
name = "migration_test"
path = "examples/migration_test.rs"

[[bench]]
name = "provider_performance"
harness = false

[features]
default = []
swift = ["dep:tree-sitter-swift"]
schema = ["dep:schemars"]

[dependencies.tree-sitter-swift]
version = "0.7.1"
optional = true

[package.metadata.cargo-machete]
ignored = ["dotenvy", "itertools", "toml_edit"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
assert_fs = "1.1"
nix = { version = "0.30", features = ["user"] }
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
