[package]
name = "vtcode-llm-directline"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Microsoft DirectLine v3 provider for VTCode LLM integration"
license = "MIT"
publish = false
categories = ["api-bindings", "science::ml"]
keywords = ["vtcode", "llm", "microsoft", "directline", "azure"]

[features]
default = ["directline"]
directline = []
telemetry = []
mock = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["time"] }
tracing = "0.1"
vtcode-commons = { path = "../vtcode-commons", version = "0.43.6" }
vtcode-config = { path = "../vtcode-config", version = "0.43.6" }
vtcode-llm-types = { path = "../vtcode-llm-types", version = "0.43.6" }
vtcode-llm-common = { path = "../vtcode-llm-common", version = "0.43.6" }

[dev-dependencies]
futures = "0.3"
tempfile = "3"
assert_fs = "1.1"
