[package]
name = "vtcode-llm-gemini"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Gemini (Google AI) provider implementation for VTCode"
license = "MIT"
publish = false
categories = ["api-bindings", "science::ml"]
keywords = ["vtcode", "llm", "ai", "gemini", "google"]

[dependencies]
# Core vtcode dependencies
vtcode-commons = { path = "../vtcode-commons", version = "0.43.6" }
vtcode-core = { path = "../vtcode-core", version = "0.43.6" }

# Async runtime
async-stream = "0.3"
async-trait = "0.1"
tokio = { version = "1.48", features = ["sync", "macros"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
assert_fs = "1.1"
