[package]
name = "vtcode-llm-minimax"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Standalone Minimax LLM provider for VTCode (wraps Anthropic)"
license = "MIT"
publish = false
categories = ["api-bindings", "science::ml"]
keywords = ["vtcode", "llm", "ai", "minimax"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# VTCode dependencies
vtcode-config = { path = "../vtcode-config", version = "0.43.6" }
vtcode-llm-types = { path = "../vtcode-llm-types", version = "0.43.6" }
vtcode-llm-common = { path = "../vtcode-llm-common", version = "0.43.6" }
vtcode-llm-anthropic = { path = "../vtcode-llm-anthropic", version = "0.43.6" }

[dev-dependencies]
tokio-test = "0.4"
