[package]
name = "vtcode-llm-types"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Shared types and traits for LLM provider implementations"
license = "MIT"
keywords = ["llm", "ai", "types", "provider"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.48", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
