[package]
name = "vtcode-llm"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Prototype extraction of VTCode's unified LLM client layer"
license = "MIT"
publish = false
categories = ["api-bindings", "science::ml"]
keywords = ["vtcode", "llm", "ai", "openai", "anthropic"]

[features]
default = [
    "anthropic",
    "deepseek",
    "google",
    "microsoft",
    "moonshot",
    "ollama",
    "openai",
    "openrouter",
    "xai",
    "zai",
    "functions",
]

anthropic = ["dep:vtcode-llm-anthropic"]
deepseek = []
google = ["dep:vtcode-llm-gemini"]
microsoft = ["dep:vtcode-llm-microsoft"]
moonshot = []
ollama = []
openai = ["dep:vtcode-llm-openai"]
openrouter = ["dep:vtcode-llm-openrouter"]
xai = []
zai = []
functions = []
telemetry = []
mock = ["dep:async-trait"]

[dependencies]
anyhow = "1.0"
async-trait = { version = "0.1", optional = true }
vtcode-commons = { path = "../vtcode-commons", version = "0.43.6" }
vtcode-llm-types = { path = "../vtcode-llm-types", version = "0.43.6" }
vtcode-llm-anthropic = { path = "../vtcode-llm-anthropic", version = "0.43.6", optional = true }
vtcode-llm-gemini = { path = "../vtcode-llm-gemini", version = "0.43.6", optional = true }
vtcode-llm-microsoft = { path = "../vtcode-llm-microsoft", version = "0.43.6", optional = true }
vtcode-llm-openai = { path = "../vtcode-llm-openai", version = "0.43.6", optional = true }
vtcode-llm-openrouter = { path = "../vtcode-llm-openrouter", version = "0.43.6", optional = true }

[dev-dependencies]
futures = "0.3"
tempfile = "3"
assert_fs = "1.1"
