[package]
name = "vtcode-pods"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "GPU pod management for VT Code"
license.workspace = true
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-pods"
categories = ["development-tools"]
keywords = ["vt", "pods", "gpu", "management"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
vtcode-commons = { path = "../vtcode-commons", version = "0.128.4" }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
