[package]
name = "vtcode-procedures"
version = "0.43.6"
edition = "2024"
authors = ["vinhnx <vinhnx@users.noreply.github.com>"]
description = "Standard Operating Procedures system for VTCode agents"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vinhnx/vtcode"
repository = "https://github.com/vinhnx/vtcode"
documentation = "https://docs.rs/vtcode-procedures"
keywords = ["ai", "procedures", "agents", "llm", "rust"]
categories = ["development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.48", features = ["sync"] }
tracing = "0.1"
async-trait = "0.1.89"
serde_json = "1.0"
walkdir = "2.5"

# Workspace dependencies
vtcode-config = { path = "../vtcode-config", version = "0.43.6" }
vtcode-rag = { path = "../vtcode-rag", version = "0.43.6" }
vtcode-vectordb = { path = "../vtcode-vectordb", version = "0.43.6" }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs"] }
