[package]
name = "vtcode-tools"
version.workspace = true
edition.workspace = true
rust-version = "1.88"
authors = ["Vinh Nguyen <vinhnguyen2308@gmail.com>"]
description = "ACP tool integration for inter-agent communication"
license.workspace = true
publish = false
categories = ["development-tools"]
keywords = ["vtcode", "tools", "acp", "agent"]

[dependencies]
vtcode-core = { path = "../vtcode-core", version = "0.128.4", default-features = false }
vtcode-acp = { path = "../vtcode-acp", version = "0.128.4" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true
